Version 5.6.2 (12/??/2020):
	* Handle strndup being a macro.  Thanks much to aitap.  

Version 5.6.1 (11/24/2020):
	* Fixed the installdocs target.  Thanks to matthewluckie.

Version 5.6.0 (11/22/2020):
	* Implemented a snprintf to [hopefully] stop recursion.  Thanks to drok.
	* Added append_string and friends for better string output.
	* Fixed strndup handling when it is a macro.  Thanks to danielgora.
	* Fixed strndup configuration and handling in general.
	* Added better getenv handling.
	* Fixed issues around page-size detection and heap extension.
	* Added circleci to github.
	* Improved the test program output.
	* Added strnlen configuration and handling.
	* Moved to git on April 9, 2018.

Version 5.5.2 (5/14/2007):
	* Removed some left-over references to the dmalloc.info file.
	* Fixed some unsigned/signed issues in one of the dmalloc_t tests.
	* Fixed problems with configure and SL_LINK_OBJS.

Version 5.5.1 (3/25/2007):
	* Fixed some problems with str[n]dup argument checking.
	* Fixed bug where LOG_PNT_SEEN_COUNT=0 caused dmalloc_examine segfault.
	* Fixed bug with the checking of the MAX_FILE_LENGTH. 
	* Revamped the tests for user pointers. Added better support for sizes.
	* Added dmalloc_verify_pnt_strsize to support strnlen size testing.
	* Added missing DMALLOC_FUNC_CHECK routines: atoi, atol, memmove
	* Added a number of special checks for DMALLOC_FUNC_CHECK stuff.
	* Fixed all of the DMALLOC_FUNC_CHECK arguments.

Version 5.5.0 (2/8/2007):
	* Fixed a problem with Cygwin env parsing.
	* Improved regression tests on argument checking functions.
	* Fixed some problems with function argument checking and length args.
	* Added handling of strndup function.
	* Added overlapping memory check for memcpy if memmove exists.
	* Added __FILE__ and __LINE__ arguments to function checks.
	* Added patches to [hopefully] improve the building under Mac OSX.
	* Added dmalloc_get_stats function to report on internal heap stats.