@@ -1,4 +1,5 @@
 Version 5.6.2 (12/??/2020):
+	* Fixed bug with loc_snprintf use of va_args.  Thanks much to aitap.  
 	* Handle strndup being a macro.  Thanks much to aitap.  
 
 Version 5.6.1 (11/24/2020):
